--- a/src/components/AddClient/addClient.module.css
+++ b/src/components/AddClient/addClient.module.css
@@ -77,11 +77,12 @@
   margin-top: 20px;
 }
 .bottomButton {
-  margin: 20px 0px 10px 0px;
+  margin: 15px 0px 5px 0px;
 }
 .bottomButton,
 .bottomButton > button,
-.bottomButton > div {
+.bottomButton > div,
+.saveAndContinue {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -218,7 +219,7 @@
 .center {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 7px;
   flex-direction: column;
   justify-content: center;
 }
