--- a/src/components/ViewClient/viewclient.module.css
+++ b/src/components/ViewClient/viewclient.module.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .main {
   background: #ffffff;
   box-shadow: 0px 1px 5px rgba(3, 0, 55, 0.08);
