--- a/src/components/ViewClient/viewclient.module.css
+++ b/src/components/ViewClient/viewclient.module.css
@@ -14,6 +14,10 @@
   scroll-snap-type: x mandatory;
   scroll-snap-type: y mandatory;
 }
+.viewClientContainer::-webkit-scrollbar,
+.main::-webkit-scrollbar {
+  display: none;
+}
 .viewClientContainer {
   width: 1145px;
   display: flex;
@@ -187,7 +191,9 @@
 }
 @media (min-width: 768px) {
   .main {
-    margin: 10px;
-    width: 97%;
+    background: transparent;
+    box-shadow: none;
+    border-radius: 0;
+    margin: 0px;
   }
 }
